src/App/App.scss
@use '../abstracts/' as *;

.app {
  width: 100vw;
  height: 100vh;
  display: flex;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  scrollbar-width: 5px;

  &::-webkit-scrollbar {
    width: 5px;
  }

  &::-webkit-scrollbar-track {
    background: $color-dark;
  }

  &::-webkit-scrollbar-thumb {
    background: $color-tertiary;
  }

  @include sm {
    scroll-snap-type: y proximity;
  }
}

.app-container {
  width: 70%;
  margin: auto auto;

  @include xl {
    width: auto;
    margin: 0;
  }
}

